<resources>
    <string name="app_name">DemoApplication</string>
    <string name="login">Login</string>
    <string name="fullname">FullName</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
</resources>