<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_image_view"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/tvFullNameAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/fullname"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtFullNameAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:inputType="text"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvFullNameAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvFullNameAdd"
            app:layout_constraintTop_toTopOf="@+id/tvFullNameAdd" />

        <TextView
            android:id="@+id/tvAgeAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/age"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvFullNameAdd"
            app:layout_constraintTop_toBottomOf="@+id/tvFullNameAdd" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/address"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvAgeAdd"
            app:layout_constraintTop_toBottomOf="@+id/tvAgeAdd" />

        <TextView
            android:id="@+id/tvPhoneAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/phone"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

        <EditText
            android:id="@+id/edtAgeAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/edtFullNameAdd"
            app:layout_constraintStart_toStartOf="@+id/edtFullNameAdd"
            app:layout_constraintTop_toTopOf="@+id/tvAgeAdd" />

        <EditText
            android:id="@+id/edtAddressAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/edtAgeAdd"
            app:layout_constraintStart_toStartOf="@+id/edtAgeAdd"
            app:layout_constraintTop_toTopOf="@+id/tvAddress" />

        <EditText
            android:id="@+id/edtPhoneAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvPhoneAdd"
            app:layout_constraintEnd_toEndOf="@+id/edtAddressAdd"
            app:layout_constraintStart_toStartOf="@+id/edtAddressAdd"
            app:layout_constraintTop_toTopOf="@+id/tvPhoneAdd" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_submit"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
